# fastapi_app

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  start_app.sh
fastapi_app/: main.py
fastapi_app/data/: __init__.py  crud.py  schemas.py  statistic.py  views.py
fastapi_app/database/: __init__.py  config.py  db.sqlite3  db_helper.py  models.py
